# endnote-mcp

./: .gitignore  README.md
.agents/plugins/: marketplace.json
plugins/endnote/: .mcp.json  README.md  pyproject.toml
plugins/endnote-local-adapter/: .mcp.json  LICENSE  README.md
plugins/endnote-local-adapter/.codex-plugin/: plugin.json
plugins/endnote-local-adapter/skills/endnote/: SKILL.md
plugins/endnote-local-adapter/src/endnote_mcp/: __init__.py  endnote.py  server.py
plugins/endnote-local-adapter/tests/: test_endnote.py
plugins/endnote/config/: libraries.example.json
plugins/endnote/scripts/: smoke_test.py
plugins/endnote/skills/endnote/: SKILL.md
plugins/endnote/src/endnote_mcp/: endnote.py
plugins/endnote/tests/: test_endnote.py
