[project]
name = "endnote-local-adapter"
version = "0.1.0"
description = "Unofficial read-only MCP adapter for local EndNote libraries."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.13.0,<2",
  "pypdf>=6.0.0,<7",
]

[project.scripts]
endnote-mcp = "endnote_mcp.server:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/endnote_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
